--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Perfil de la carrera</h2>
                 <div class="summary">
                     <p>
-                        Desarrollador de software con mas de 6 años de experiencia en el desarrollo de aplicaciones web, escritorio y servicios, con diferentes tecnologias (Net, Java)
+                        Desarrollador de software con mas de 6 años de experiencia en el liderazgo y desarrollo de aplicaciones web, escritorio y servicios, con diferentes tecnologias (Net, Java)
                         en constante capacitación para obtener procesos mas eficientes y mejores soluciones ayudando a las compañías a generar mas utilidades. 
-                        Altamente motivado y orientado a la halidad.
+                        Altamente motivado, orientado a la habilidad y la integracion de equipos optimos para el desarrollo de proyectos de software.
                     </p>
                 </div><!--//summary-->
             </section><!--//section-->
